# ChatWithPDF-RAG-MongoDB

./: .env  README.md  main.py  pyproject.toml  requirements.txt  test_mongo.py
database/: mongodb.py  vector_index.py
embeddings/: embedding_model.py
ingestion/: ingest.py  loader.py  splitter.py
llm/: ollama_llm.py
prompts/: system_prompt.py
retrieval/: vector_search.py
